# k1_mjlab

./: .gitignore  .justfile  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
src/k1_mjlab/robot/: k1_constants.py
src/k1_mjlab/robot/xmls/: k1.xml
src/k1_mjlab/scripts/: list_envs.py  play.py  record.py  train.py
src/k1_mjlab/tasks/: __init__.py  env_cfgs.py  rl_cfg.py
